<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PSC quiz</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btn_qa">Quantitative Aptitude</string>
    <string name="btn_ment_ability">Mental Ability And \nReasoning</string>
    <string name="btn_general_science">General Science</string>
    <string name="btn_curr_affairs">Current Affairs</string>
    <string name="btn_india">Facts about India</string>
    <string name="btn_kerala">Facts about Kerala</string>
    <string name="btn_civil_rights">Indian Constitution and Civil Rights</string>
    <string name="btn_english">General English</string>
    <string name="btn_social_welfare">Social Welfare Scheme and Measures</string>
    <string name="btn_it">Information Technology</string>
    <string name="qa">qa</string>
    <string name="ment_ability">mental_ability</string>
    <string name="general_science">science</string>
    <string name="curr_affairs">current_affairs</string>
    <string name="india">india</string>
    <string name="kerala">kerala</string>
    <string name="civil_rights">indian_constitution</string>
    <string name="english">english</string>
    <string name="social_welfare">social_welfare</string>
    <string name="it">it</string>
    <string name="info_txt">Information about that quetion is not available.</string>
    <string name="q_no">q.no</string>
    <string name="question">question comes here</string>
    <string name="option_a">option a</string>
    <string name="option_b">option b</string>
    <string name="option_c">option c</string>
    <string name="option_d">option d</string>
    <string name="desc">images to diplay the option buttons</string>
    
    <string name="check_answer">CHECK ANSWER</string>
    <string name="get_next_question">NEXT QUESTION</string>
    <string name="ad_Unit_ID">ca-app-pub-3940256099942544/6300978111</string>

</resources>
