<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/page1_bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ja.pscquiz.PscQuizActivity" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btn_aptitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:background="@android:color/transparent"
                android:gravity="start|center_vertical"
                android:text="@string/btn_qa"
                android:textColor="#ffffff"
                android:textSize="@dimen/font_size" >
            </Button>

            <Button
                android:id="@+id/btn_mental_ability"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="70dp"
                android:background="@android:color/transparent"
                android:gravity="start|center_vertical"
                android:text="@string/btn_ment_ability"
                android:textColor="#ffffff"
                android:textSize="@dimen/font_size_small" >
            </Button>

            <Button
                android:id="@+id/btn_Science"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="140dp"
                android:background="@android:color/transparent"
                android:gravity="start|center_vertical"
                android:text="@string/btn_general_science"
                android:textColor="#ffffff"
                android:textSize="@dimen/font_size" >
            </Button>

            <Button
                android:id="@+id/btn_current_affairs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="190dp"
                android:background="@android:color/transparent"
                android:gravity="start|center_vertical"
                android:text="@string/btn_curr_affairs"
                android:textColor="#ffffff"
                android:textSize="@dimen/font_size" >
            </Button>

            <Button
                android:id="@+id/btn_india"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="240dp"
                android:background="@android:color/transparent"
                android:gravity="start|center_vertical"
                android:text="@string/btn_india"
                android:textColor="#ffffff"
                android:textSize="@dimen/font_size" >
            </Button>

            <Button
                android:id="@+id/btn_kerala"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="290dp"
                android:background="@android:color/transparent"
                android:gravity="start|center_vertical"
                android:text="@string/btn_kerala"
                android:textColor="#ffffff"
                android:textSize="@dimen/font_size" >
            </Button>

            <Button
                android:id="@+id/btn_civil_rights"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="340dp"
                android:background="@android:color/transparent"
                android:gravity="start|center_vertical"
                android:text="@string/btn_civil_rights"
                android:textColor="#ffffff"
                android:textSize="@dimen/font_size_small" >
            </Button>

            <Button
                android:id="@+id/btn_english"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="410dp"
                android:background="@android:color/transparent"
                android:gravity="start|center_vertical"
                android:text="@string/btn_english"
                android:textColor="#ffffff"
                android:textSize="@dimen/font_size" >
            </Button>

            <Button
                android:id="@+id/btn_social"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="460dp"
                android:background="@android:color/transparent"
                android:gravity="start|center_vertical"
                android:text="@string/btn_social_welfare"
                android:textColor="#ffffff"
                android:textSize="@dimen/font_size_small" >
            </Button>

            <Button
                android:id="@+id/btn_it"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="530dp"
                android:background="@android:color/transparent"
                android:gravity="start|center_vertical"
                android:text="@string/btn_it"
                android:textColor="#ffffff"
                android:textSize="@dimen/font_size_it" >
            </Button>
<!-- 
            <ImageView
                android:id="@+id/imgLogo_qa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignTop="@+id/btn_aptitude"
                android:src="@drawable/page2_category_icon_q" />
            <ImageView
                android:id="@+id/imgLogo_m"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignTop="@+id/btn_aptitude"
                android:src="@drawable/page2_category_icon_q" />
            <ImageView
                android:id="@+id/imgLogo_gs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignTop="@+id/btn_aptitude"
                android:src="@drawable/page2_category_icon_q" />
            <ImageView
                android:id="@+id/imgLogo_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignTop="@+id/btn_aptitude"
                android:src="@drawable/page2_category_icon_q" />
            <ImageView
                android:id="@+id/imgLogo_fi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignTop="@+id/btn_aptitude"
                android:src="@drawable/page2_category_icon_q" />
            <ImageView
                android:id="@+id/imgLogo_fk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignTop="@+id/btn_aptitude"
                android:src="@drawable/page2_category_icon_q" />
            <ImageView
                android:id="@+id/imgLogo_cc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignTop="@+id/btn_aptitude"
                android:src="@drawable/page2_category_icon_q" />
            <ImageView
                android:id="@+id/imgLogo_ge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignTop="@+id/btn_aptitude"
                android:src="@drawable/page2_category_icon_q" />
            <ImageView
                android:id="@+id/imgLogo_sws"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignTop="@+id/btn_aptitude"
                android:src="@drawable/page2_category_icon_q" />
            <ImageView
                android:id="@+id/imgLogo_it"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignTop="@+id/btn_aptitude"
                android:src="@drawable/page2_category_icon_q" />
      -->       
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>